        is a conflict of interest (T#043).
      # More AGF messages were added, including some pulled in from a GitHub
        merge (our first community code contribution!). Some category
        labels were pre-pended to help better manage this growing list.
        The code copy was also synced with community copy at:
        http://en.wikipedia.org/wiki/WP:STiki/Good-faith-revert_messages
      # Metadata panel content now has "mouseover" support. In particular,
        this should permit the full display of comments which are truncated
        because they are too lengthy to fit in the fixed-size placeholder.
      # STiki users have experienced a loss of edit session, resulting in 
        editing while logged out. This results in privacy loss and community
        confusion. This is believed to be a bug on the WMF server-side.
        However, using the "assert=true" check, STiki can now at least detect
        the error state -- it pops a dialog and forces a restart (T#048). 
      # Due to an WMF API change, we were forced to change the way user
        edit counts are performed. The WMF changed the way pagination is done,
        breaking our earlier parser in some cases. This code was used to 
        determine STiki permissions (>1000 NS0 edits), "don't template 
        the regulars" logic, and non-critical aspects of milestone reporting.
      # Minor improvements to warning increment logic; in particular, better
        handling when duplicate section headers exist.

  * 2014-03-25
      # Emergency release in order to fix login code broken by a small
        WMF change (most of the burden probably falls to STiki for getting
        this incorrect). This update will be forced; that is, older versions
        of the STiki software will show an "upgrade required" message.
      # Changed the "Revision Filter" menu title to "Displayed Edits"
        in order to clear up some abiguity over sub-menu items.
  
  * 2014-02-05